--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>corefriend</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>core</title>
+<style type="text/css">
+.qrcode {
+	width: 150px;
+	height: 150px;
+	margin-top: -150px;
+	margin-right: auto;
+	margin-bottom: auto;
+	margin-left: auto;
+}
+</style>
 </head>
-<body>
-    <h1>sorry,we will coming soon!</h1>
+
+<body style="background:#008AAB">
+<div style="width:100%;height:100%;background:urL(images/core.gif) center center no-repeat;" > </div>
+<div style="clear:both"></div>
+<!--
+<div class="qrcode">
+<img src="images/qrcode.jpg" width="150" height="150"> </div>-->
 </body>
 </html>
